# wealth-gainer

./: .gitignore
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  agent_log.py  base.py  fundamental.py  indicator.py  market_regime.py  news.py  order.py  performance_report.py  portfolio.py  price.py  recommendation.py  risk_report.py  stock.py  trade_outcome.py  watchlist.py
backend/app/routes/: health.py
backend/app/schemas/: health.py
backend/migrations/: env.py
backend/migrations/versions/: 2599d104a7ce_001_initial_schema.py
docs/: ARCHITECTURE.md  IT_DEPARTMENT.md  PROJECT_PLAN.md  RESEARCH_ANALYSIS_AND_AI_AGENTS.md
docs/backlog/: FEATURE-001-backend-and-db-foundation.md
docs/decisions/: 000-template.md
docs/specs/: SPEC-001-backend-and-db-foundation.md
frontend/src/ui-kit/: components.jsx
